adicionando tsyringe para injecao de dependencias, refatorado o codigo utizando o tsyringe
