# src/modules/carros/useCases/criarCategoria/CriarCategoriaController.ts
@@ -1,14 +1,15 @@
 import { Response, Request } from "express";
+import { container } from "tsyringe";
 
 import { CriarCategoriaUseCase } from "./CriarCategoriaUseCase";
 
 class CriarCategoriaController {
-  constructor(private criarCategoriaUseCase: CriarCategoriaUseCase) {}
-
   async handle(request: Request, response: Response): Promise<Response> {
     const { nome, descricao } = request.body;
 
-    await this.criarCategoriaUseCase.execute({ nome, descricao });
+    const criarCategoriaUseCase = container.resolve(CriarCategoriaUseCase);
+
+    await criarCategoriaUseCase.execute({ nome, descricao });
 
     return response.status(201).send();
   }
