# src/modules/carros/useCases/criarEspecificacao/CriarEspecificacaoController.ts
@@ -1,14 +1,17 @@
 import { Request, Response } from "express";
+import { container } from "tsyringe";
 
 import { CriarEspecificacaoUseCase } from "./CriarEspecificacaoUseCase";
 
 class CriarEspecificacaoController {
-  constructor(private criarEspecificacaoUseCase: CriarEspecificacaoUseCase) {}
-
-  handle(request: Request, response: Response): Response {
+  async handle(request: Request, response: Response): Promise<Response> {
     const { nome, descricao } = request.body;
 
-    this.criarEspecificacaoUseCase.execute({ nome, descricao });
+    const criarEspecificacaoUseCase = container.resolve(
+      CriarEspecificacaoUseCase
+    );
+
+    await criarEspecificacaoUseCase.execute({ nome, descricao });
 
     return response.status(201).send();
   }
