# src/modules/carros/useCases/listarCategorias/ListarCategoriasController.ts
@@ -1,12 +1,13 @@
 import { Request, Response } from "express";
+import { container } from "tsyringe";
 
 import { ListarCategoriasUseCase } from "./ListarCategoriasUseCase";
 
 class ListarCategoriasController {
-  constructor(private listarCategoriaUseCase: ListarCategoriasUseCase) {}
+  async handle(request: Request, response: Response): Promise<Response> {
+    const listarCategoriaUseCase = container.resolve(ListarCategoriasUseCase);
 
-  handle(request: Request, response: Response): Response {
-    const categorias = this.listarCategoriaUseCase.execute();
+    const categorias = await listarCategoriaUseCase.execute();
 
     return response.json(categorias);
   }
