# src/modules/carros/useCases/listarEspecificacao/ListarEspecificacaoController.ts
@@ -1,12 +1,14 @@
 import { Request, Response } from "express";
+import { container } from "tsyringe";
 
 import { ListarEspecificacaoUseCase } from "./ListarEspecificacaoUseCase";
 
 class ListarEspecificacoesController {
-  constructor(private listarEspecificacaoUseCase: ListarEspecificacaoUseCase) {}
-
-  handle(request: Request, response: Response): Response {
-    const especificacoes = this.listarEspecificacaoUseCase.execute();
+  async handle(request: Request, response: Response): Promise<Response> {
+    const listarEspecificacaoUseCase = container.resolve(
+      ListarEspecificacaoUseCase
+    );
+    const especificacoes = await listarEspecificacaoUseCase.execute();
 
     return response.json(especificacoes);
   }
